@startuml

title __DAO's Class Diagram__\n

  namespace com.shoppersDenApp.dao {
    interface com.shoppersDenApp.dao.AdminDao {
        {abstract} + addCategory()
        {abstract} + addProdToCategory()
        {abstract} + deleteProduct()
        {abstract} + getAllTransactions()
        {abstract} + login()
        {abstract} + updateAccount()
        {abstract} + viewTransactions()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    class com.shoppersDenApp.dao.AdminDaoImpl {
        - accountPrepStatement : PreparedStatement
        - addCategoryPrepStatement : PreparedStatement
        - addPrepStatement : PreparedStatement
        - adminLoginPrepStatement : PreparedStatement
        - admin_id : long
        - conn : Connection
        - deleteProductPrepStatement : PreparedStatement
        - loginFlag : boolean
        - resourceBundle : ResourceBundle
        + AdminDaoImpl()
        + addCategory()
        + addProdToCategory()
        + deleteProduct()
        + getAllTransactions()
        + login()
        + updateAccount()
        + viewTransactions()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    interface com.shoppersDenApp.dao.CartDao {
        {abstract} + addToCart()
        {abstract} + removeFromCart()
        {abstract} + updateCart()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    class com.shoppersDenApp.dao.CartDaoImpl {
        + addToCart()
        + removeFromCart()
        + updateCart()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    interface com.shoppersDenApp.dao.CustomerDao {
        {abstract} + addToCart()
        {abstract} + login()
        {abstract} + pay()
        {abstract} + register()
        {abstract} + removeItemFromCart()
        {abstract} + updateCart()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    class com.shoppersDenApp.dao.CustomerDaoImpl {
        - addressPrepStatement : PreparedStatement
        - conn : Connection
        - flag : boolean
        - getAddressPrepStatement : PreparedStatement
        - loginPrepStatement : PreparedStatement
        - registerPrepStatement : PreparedStatement
        - resourceBundle : ResourceBundle
        + CustomerDaoImpl()
        + addToCart()
        + login()
        + pay()
        + register()
        + removeItemFromCart()
        + updateCart()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    interface com.shoppersDenApp.dao.ProductDao {
        {abstract} + display()
        {abstract} + getAllProducts()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    class com.shoppersDenApp.dao.ProductDaoImpl {
        - conn : Connection
        - resourceBundle : ResourceBundle
        - statement : Statement
        + ProductDaoImpl()
        + display()
        + getAllProducts()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    interface com.shoppersDenApp.dao.TransactionDao {
        {abstract} + displayAllTransaction()
        {abstract} + displayTransactions()
        {abstract} + sendTransactionList()
        {abstract} + uploadTransaction()
    }
  }
  

  namespace com.shoppersDenApp.dao {
    class com.shoppersDenApp.dao.TransactionDaoImpl {
        - allTransactionsStatement : PreparedStatement
        - conn : Connection
        - resourceBundle : ResourceBundle
        - transactionPrepStatement : PreparedStatement
        - transactionUploadPrepStatement : PreparedStatement
        + TransactionDaoImpl()
        + displayAllTransaction()
        + displayTransactions()
        + sendTransactionList()
        + uploadTransaction()
    }
  }
  

  com.shoppersDenApp.dao.AdminDaoImpl .up.|> com.shoppersDenApp.dao.AdminDao
  com.shoppersDenApp.dao.CartDaoImpl .up.|> com.shoppersDenApp.dao.CartDao
  com.shoppersDenApp.dao.CustomerDaoImpl .up.|> com.shoppersDenApp.dao.CustomerDao
  com.shoppersDenApp.dao.CustomerDaoImpl o-- com.shoppersDenApp.models.Cart : cart
  com.shoppersDenApp.dao.CustomerDaoImpl o-- com.shoppersDenApp.dao.CartDao : cartDao
  com.shoppersDenApp.dao.ProductDaoImpl .up.|> com.shoppersDenApp.dao.ProductDao
  com.shoppersDenApp.dao.TransactionDaoImpl .up.|> com.shoppersDenApp.dao.TransactionDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
